@@ -16,6 +16,7 @@ Changelog for 1.3.24
 * Changed upgrade screen to pull AR/AP numbers (Erik H)
 * Rebuild modules after upgrade, ensuring upgrade to latest version (Chris T)
 * Fixed credit limit usage calculations (Chris T, h/t Erik H)
+* Fixes to get LedgerSMB running clearly using FCGI (Chris T)
 
 Berend T is Berend Tober
 Chris T is Chris Travers
